fix requested mock loc